--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,15 @@
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="nickname">Nickname</string>
+    <string name="email">E-mail</string>
+    <string name="password">Password</string>
+
+
+
+
     <string name="publicKeySharedPref">publicKey</string>
     <string name="privateKeySharedPref">privateKey</string>
     <string name="userIDSharedPref">userID</string>
+    <string name="nicknameSharedPref">nickname</string>
+
 </resources>
