--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,7 @@
     <string name="password">Password</string>
     <string name="add">Add</string>
     <string name="id">login ID</string>
-
-
-
+    <string name="username">Username</string>
 
 
 </resources>
