--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="add">Add</string>
     <string name="id">login ID</string>
     <string name="username">Username</string>
+    <string name="forgot_your_password">Forgot your password?</string>
+    <string name="error_mail">Invalid email</string>
 
 
 </resources>
