--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -5,4 +5,5 @@
     <string name="username">Username</string>
     <string name="forgot_your_password">Forgot your password?</string>
     <string name="error_mail">Invalid email</string>
+    <string name="delete_contact">Delete</string>
 </resources>
