--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="your_id">Your login ID : </string>
     <string name="id_copied">ID copied</string>
     <string name="logout">Logout</string>
+    <string name="delete_contact">Delete</string>
 
 </resources>
